tests/baselines/reference/unionTypeMembers(strict=true).errors.txt
unionTypeMembers.ts(39,7): error TS2454: Variable 'x' is used before being assigned.
unionTypeMembers.ts(40,7): error TS2454: Variable 'x' is used before being assigned.
unionTypeMembers.ts(41,12): error TS2454: Variable 'x' is used before being assigned.
unionTypeMembers.ts(42,12): error TS2454: Variable 'x' is used before being assigned.
unionTypeMembers.ts(43,1): error TS2454: Variable 'x' is used before being assigned.
unionTypeMembers.ts(44,1): error TS2454: Variable 'x' is used before being assigned.
unionTypeMembers.ts(44,38): error TS2345: Argument of type 'string | number' is not assignable to parameter of type 'never'.
  Type 'string' is not assignable to type 'never'.
unionTypeMembers.ts(46,7): error TS2454: Variable 'x' is used before being assigned.
unionTypeMembers.ts(46,39): error TS2454: Variable 'num' is used before being assigned.
unionTypeMembers.ts(47,7): error TS2454: Variable 'x' is used before being assigned.
unionTypeMembers.ts(48,7): error TS2454: Variable 'x' is used before being assigned.
unionTypeMembers.ts(49,12): error TS2454: Variable 'x' is used before being assigned.
unionTypeMembers.ts(51,1): error TS2454: Variable 'x' is used before being assigned.
unionTypeMembers.ts(51,3): error TS2339: Property 'propertyOnlyInI1' does not exist on type 'I1<number> | I2<number>'.
  Property 'propertyOnlyInI1' does not exist on type 'I2<number>'.
unionTypeMembers.ts(52,1): error TS2454: Variable 'x' is used before being assigned.
unionTypeMembers.ts(52,3): error TS2339: Property 'propertyOnlyInI2' does not exist on type 'I1<number> | I2<number>'.
  Property 'propertyOnlyInI2' does not exist on type 'I1<number>'.
unionTypeMembers.ts(53,1): error TS2454: Variable 'x' is used before being assigned.
unionTypeMembers.ts(53,3): error TS2339: Property 'methodOnlyInI1' does not exist on type 'I1<number> | I2<number>'.
  Property 'methodOnlyInI1' does not exist on type 'I2<number>'.
unionTypeMembers.ts(54,1): error TS2454: Variable 'x' is used before being assigned.
unionTypeMembers.ts(54,3): error TS2339: Property 'methodOnlyInI2' does not exist on type 'I1<number> | I2<number>'.
  Property 'methodOnlyInI2' does not exist on type 'I1<number>'.


==== unionTypeMembers.ts (20 errors) ====
    interface I1<T> {
        commonMethodType(a: string): string;
        commonPropertyType: string;
    
        commonMethodDifferentParameterType(a: string): string;
        commonMethodDifferentReturnType(a: string): string;
        commonPropertyDifferenType: string;
    
        commonMethodWithTypeParameter(a: T): T;
        commonMethodWithOwnTypeParameter<U>(a: U): U;
    
        methodOnlyInI1(a: string): string;
        propertyOnlyInI1: string;
    }
    
    interface I2<T> {
        commonMethodType(a: string): string;
        commonPropertyType: string;
    
        commonMethodDifferentParameterType(a: number): number;
        commonMethodDifferentReturnType(a: string): number;
        commonPropertyDifferenType: number;
    
        commonMethodWithTypeParameter(a: T): T;
        commonMethodWithOwnTypeParameter<U>(a: U): U;
    
        methodOnlyInI2(a: string): string;
        propertyOnlyInI2: string;
    }
    
    // a union type U has those members that are present in every one of its constituent types, 
    // with types that are unions of the respective members in the constituent types
    var x : I1<number> | I2<number>;
    var str: string;
    var num: number;
    var strOrNum: string | number;
    
    // If each type in U has a property P, U has a property P of a union type of the types of P from each type in U.
    str = x.commonPropertyType; // string
          ~
!!! error TS2454: Variable 'x' is used before being assigned.
    str = x.commonMethodType(str); // (a: string) => string so result should be string
          ~
!!! error TS2454: Variable 'x' is used before being assigned.
    strOrNum = x.commonPropertyDifferenType;
               ~
!!! error TS2454: Variable 'x' is used before being assigned.
    strOrNum = x.commonMethodDifferentReturnType(str); // string | union
               ~
!!! error TS2454: Variable 'x' is used before being assigned.
    x.commonMethodDifferentParameterType; // No error - property exists
    ~
!!! error TS2454: Variable 'x' is used before being assigned.
    x.commonMethodDifferentParameterType(strOrNum); // error - no call signatures because the type of this property is ((a: string) => string) | (a: number) => number
    ~
!!! error TS2454: Variable 'x' is used before being assigned.
                                         ~~~~~~~~
!!! error TS2345: Argument of type 'string | number' is not assignable to parameter of type 'never'.
!!! error TS2345:   Type 'string' is not assignable to type 'never'.
                                                    // and the call signatures arent identical
    num = x.commonMethodWithTypeParameter(num);
          ~
!!! error TS2454: Variable 'x' is used before being assigned.
                                          ~~~
!!! error TS2454: Variable 'num' is used before being assigned.
    num = x.commonMethodWithOwnTypeParameter(num);
          ~
!!! error TS2454: Variable 'x' is used before being assigned.
    str = x.commonMethodWithOwnTypeParameter(str);
          ~
!!! error TS2454: Variable 'x' is used before being assigned.
    strOrNum = x.commonMethodWithOwnTypeParameter(strOrNum);
               ~
!!! error TS2454: Variable 'x' is used before being assigned.
    
    x.propertyOnlyInI1; // error
    ~
!!! error TS2454: Variable 'x' is used before being assigned.
      ~~~~~~~~~~~~~~~~
!!! error TS2339: Property 'propertyOnlyInI1' does not exist on type 'I1<number> | I2<number>'.
!!! error TS2339:   Property 'propertyOnlyInI1' does not exist on type 'I2<number>'.
    x.propertyOnlyInI2; // error
    ~
!!! error TS2454: Variable 'x' is used before being assigned.
      ~~~~~~~~~~~~~~~~
!!! error TS2339: Property 'propertyOnlyInI2' does not exist on type 'I1<number> | I2<number>'.
!!! error TS2339:   Property 'propertyOnlyInI2' does not exist on type 'I1<number>'.
    x.methodOnlyInI1("hello"); // error
    ~
!!! error TS2454: Variable 'x' is used before being assigned.
      ~~~~~~~~~~~~~~
!!! error TS2339: Property 'methodOnlyInI1' does not exist on type 'I1<number> | I2<number>'.
!!! error TS2339:   Property 'methodOnlyInI1' does not exist on type 'I2<number>'.
    x.methodOnlyInI2(10); // error
    ~
!!! error TS2454: Variable 'x' is used before being assigned.
      ~~~~~~~~~~~~~~
!!! error TS2339: Property 'methodOnlyInI2' does not exist on type 'I1<number> | I2<number>'.
!!! error TS2339:   Property 'methodOnlyInI2' does not exist on type 'I1<number>'.